--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,23 @@
 	</properties>
 
 	<dependencies>
-		
-		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.3</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-testng</artifactId>
 			<version>7.1.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
@@ -28,7 +39,7 @@
 			<artifactId>cucumber-java</artifactId>
 			<version>7.0.0</version>
 		</dependency>
-	
+
 		<!--	
 		<dependency>
 			<groupId>info.cukes</groupId>
@@ -89,12 +100,18 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19</version>
 				<configuration>
-				<testFailureIgnore>true </testFailureIgnore>
+					<testFailureIgnore>true </testFailureIgnore>
 					<suiteXmlFiles>
-					<!-- src/test/resources/testSuites/testng.xml -->
-						<suiteXmlFile>testNg.xml</suiteXmlFile>
+						<!-- src/test/resources/testSuites/testng.xml -->
+						<suiteXmlFile>testNG-File.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4</version>
 			</plugin>
 
 			<plugin>
@@ -105,7 +122,7 @@
 					<executable>C:\Program Files\Java\jdk1.8.0_181\bin\javac.exe</executable>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>net.masterthought</groupId>
 				<artifactId>maven-cucumber-reporting</artifactId>
