--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</properties>
 
 	<dependencies>
-		
+
 		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
 		<dependency>
 			<groupId>io.cucumber</groupId>
@@ -28,14 +28,14 @@
 			<artifactId>cucumber-java</artifactId>
 			<version>7.0.0</version>
 		</dependency>
-	
-		<!--	
+
+		<!--
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-java</artifactId>
 			<version>1.2.5</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-testng</artifactId>
@@ -47,7 +47,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		-->
 
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -92,20 +92,30 @@
 				<testFailureIgnore>true </testFailureIgnore>
 					<suiteXmlFiles>
 					<!-- src/test/resources/testSuites/testng.xml -->
-						<suiteXmlFile>testNg.xml</suiteXmlFile>
+						<suiteXmlFile>${suite}</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 
-			<plugin>
+		<!--	<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
 					<fork>true</fork>
 					<executable>C:\Program Files\Java\jdk1.8.0_181\bin\javac.exe</executable>
 				</configuration>
-			</plugin>
-			
+			</plugin> -->
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.6.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+
 			<plugin>
 				<groupId>net.masterthought</groupId>
 				<artifactId>maven-cucumber-reporting</artifactId>
@@ -125,8 +135,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
-
 		</plugins>
 
 	</build>
