--- a/pom.xml
+++ b/pom.xml
@@ -29,24 +29,6 @@
 			<version>7.0.0</version>
 		</dependency>
 
-		<!--
-		<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-java</artifactId>
-			<version>1.2.5</version>
-		</dependency>
-		<dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-testng</artifactId>
-			<version>1.2.5</version>
-			<exclusions>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		-->
 
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
@@ -117,7 +99,7 @@
 			<plugin>
 				<groupId>net.masterthought</groupId>
 				<artifactId>maven-cucumber-reporting</artifactId>
-				<version>2.8.0</version>
+				<version>5.3.0</version>
 				<executions>
 					<execution>
 						<id>execution</id>
@@ -126,9 +108,16 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<projectName>Inside_UCL</projectName>
-							<outputDirectory>${project.build.directory}</outputDirectory>
-							<inputOutput>${project.build.directory}/jsonReports</inputOutput>
+							<!-- optional, per documentation set this to "true" to bypass generation of Cucumber Reports entirely, defaults to false if not specified -->
+							<skip>false</skip>
+							<!-- output directory for the generated report -->
+							<outputDirectory>target</outputDirectory>
+							<!-- optional, defaults to outputDirectory if not specified -->
+							<inputDirectory>${project.build.directory}</inputDirectory>
+							<jsonFiles>
+									<!-- supports wildcard or name pattern -->
+									<param>**/*.json</param>
+							</jsonFiles>
 						</configuration>
 					</execution>
 				</executions>
