--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<allure.maven.version>2.10.0</allure.maven.version>
+		<aspectj.version>1.9.6</aspectj.version>
 	</properties>
 
 	<dependencies>
@@ -58,6 +60,21 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--Allure testng Dependency-->
+	  <dependency>
+			    <groupId>io.qameta.allure</groupId>
+			    <artifactId>allure-testng</artifactId>
+			    <version>2.18.1</version>
+	  </dependency> -->
+ 		<!--Allure Cucumber Dependency-->
+<!--
+		<dependency>
+		    <groupId>io.qameta.allure</groupId>
+		    <artifactId>allure-cucumber5-jvm</artifactId>
+		    <version>2.18.0</version>
+		</dependency>
+  -->
+		<!--Allure Cucumber Dependency-->
 	</dependencies>
 
 	<build>
@@ -69,22 +86,33 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19</version>
 				<configuration>
-				<testFailureIgnore>true </testFailureIgnore>
+				<testFailureIgnore>true</testFailureIgnore>
 					<suiteXmlFiles>
 					<!-- src/test/resources/testSuites/testng.xml -->
 						<suiteXmlFile>${suite}</suiteXmlFile>
 					</suiteXmlFiles>
+					<argLine>
+		         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+		         -Dcucumber.options="--plugin io.qameta.allure.cucumber5jvm.AllureCucumber5Jvm"
+					</argLine>
 				</configuration>
-			</plugin>
+				<dependencies>
+					<dependency>
+							<groupId>org.aspectj</groupId>
+							<artifactId>aspectjweaver</artifactId>
+							<version>${aspectj.version}</version>
+					</dependency>
+				</dependencies>
+			  </plugin>
+				<plugin>
+					<groupId>io.qameta.allure</groupId>
+					<artifactId>allure-maven</artifactId>
+					<version>2.10.0</version>
+					<configuration>
+						<reportVersion>2.18.0</reportVersion>
+					</configuration>
+				</plugin>
 
-		<!--	<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<fork>true</fork>
-					<executable>C:\Program Files\Java\jdk1.8.0_181\bin\javac.exe</executable>
-				</configuration>
-			</plugin> -->
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -103,7 +131,7 @@
 				<executions>
 					<execution>
 						<id>execution</id>
-						<phase>test</phase>
+						<phase>verify</phase>
 						<goals>
 							<goal>generate</goal>
 						</goals>
